[project]
name = "tgsigner"
version = "0.1.0"
description = "auto sign to telegram"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "cryptg>=0.5.2",
    "python-dotenv>=1.2.1",
    "python-socks[asyncio]>=2.8.0",
    "requests>=2.32.5",
    "telethon>=1.42.0",
]
